--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,6 @@
     <string name="random_quote">Random Quote</string>
     <string name="add_to_favorite_button">Add to favorite button</string>
     <string name="get_next_random_quote">Get next random quote</string>
+    <string name="status_image_for_loading_or_error">Status image for loading or error</string>
+    <string name="info_about_status">Info about status</string>
 </resources>
