Add tools:context to fragment layouts to be able to have preview in nav graph

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,7 @@
     <string name="status_image_for_loading_or_error">Status image for loading or error</string>
     <string name="info_about_status">Info about status</string>
     <string name="no_quote_has_been_added_to_favorites_yet">No quote has been added to favorites yet.</string>
+    <string name="settings">Settings</string>
+    <string name="about">About</string>
+    <string name="privacy_policy">Privacy Policy</string>
 </resources>
